--- a/website/mp-manager/src/main/webapp/manager.html
+++ b/website/mp-manager/src/main/webapp/manager.html
@@ -1,23 +1,22 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: domea
-  Date: 17-11-21
-  Time: 下午4:45
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en"><html>
 <head>
     <title>Mappingo后台管理系统</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="js/libs/requirejs/require.js" data-main="js/app/manager.js"></script>
     <style>
-        *, html, body {
+        html, body {
+            width: 100%;
+            height: 100%;
             margin: 0px;
             padding: 0px;
+            overflow: hidden;
+            background-color: #fcfff5;
         }
     </style>
 </head>
 <body>
+<a href=""></a>
 <div id="header" style="height: 70px;"></div>
 <div id="footer" style="height: 25px;"></div>
 </body>
