--- a/website/mp-manager/src/main/webapp/index.html
+++ b/website/mp-manager/src/main/webapp/index.html
@@ -18,7 +18,7 @@
     <h1>后台管理系统登录界面
         <small style="font-size: 20px">Mappingo</small>
     </h1>
-    <form id="loginForm" action="" method="post">
+    <form id="loginForm">
         <input type="text" name="userName" class="username" placeholder="管理员帐号">
         <input type="password" name="password" class="password" placeholder="密码">
         <table>
@@ -28,7 +28,7 @@
                     <button class="Bluebutton" id="registBtn" type="button">没有？那就注册</button>
                 </td>
                 <td style="padding-left: 10px;">
-                    <button class="Redbutton" id="loginBtn" type="submit">登录系统</button>
+                    <button class="Redbutton" id="loginBtn" type="button">登录系统</button>
                 </td>
             </tr>
             </tbody>
